# BENCH_ActMob

./: .gitignore  README.md  pyproject.toml
output/: output_summary.xlsx
output/coefficients/: bike_leisure__coefficients.csv  bike_services__coefficients.csv  bike_work__coefficients.csv  car_leisure__coefficients.csv  car_services__coefficients.csv  car_work__coefficients.csv  duration_bike_leisure__kde.csv  duration_bike_services__kde.csv  duration_bike_work__kde.csv  duration_car_leisure__kde.csv  duration_car_services__kde.csv  duration_car_work__kde.csv  duration_pt_leisure__kde.csv  duration_pt_services__kde.csv  duration_pt_work__kde.csv  duration_walk_leisure__kde.csv  duration_walk_services__kde.csv  duration_walk_work__kde.csv  pt_leisure__coefficients.csv  pt_services__coefficients.csv  pt_work__coefficients.csv  walk_leisure__coefficients.csv  walk_services__coefficients.csv  walk_work__coefficients.csv
