[project]
name = "bench-actmob"
version = "0.1.0"
description = "Agent-Based Model for Active Mobility using Mesa and Solara"
readme = "README.md"
requires-python = ">=3.11,<3.13" # Locked to <3.13 because older versions of Solara/Geopandas don't support 3.13 well yet
authors = [
    {name = "Daniel"}
]
dependencies = [
    "mesa>=3.0.0,<3.1.0",           # CRITICAL: Brings SolaraViz natively into mesa.visualization
    "mesa-viz-tornado>=0.1.3",      # Core visualization hook required by Mesa 3.0
    "solara>=1.35.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2.0.0", 
    "geopandas>=0.14.0",
    "networkx>=3.2",
    "matplotlib>=3.8.0",
    "altair>=5.0.0,<6.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0"
]

[tool.uv]
package = false